--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000">
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
